[package]
name = "vimms"
version = "0.1.0"
edition = "2021"

[dependencies]
dioxus = { version = "0.6", features = ["desktop", "router"] }
reqwest = { version = "0.12", features = ["cookies", "stream"] }
tokio = { version = "1", features = ["fs", "io-util", "macros", "rt"] }
futures-util = "0.3"
scraper = "0.22"
zip = "2.2"
sevenz-rust = "0.6"
regex = "1.11"
rand = "0.8"
lazy_static = "1.5"
dirs = "6.0.0"
rfd = "0.15"
base64 = "0.22"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
